événements ajout "modifier tout"

--- a/src/main/resources/templates/evenement/evenementCommHausseDetail.html
+++ b/src/main/resources/templates/evenement/evenementCommHausseDetail.html
@@ -34,9 +34,11 @@
 					th:href="@{'/evenement/hausse/commentaire/modifie/'+${evenement.id}}">
 					<span class="bi bi-pencil" th:title="#{modifier}"
 					aria-hidden="true"></span>
-				</a> <a id="supprime"
-					th:href="@{'/evenement/supprime/'+${evenement.id}}"> <span
-					class="confirmation bi bi-trash" style="color: red"
+				</a>&nbsp; <a th:href="@{'/evenement/modifie/'+${evenement.id}+'?complet=true'}"> <span
+					class="bi bi-pencil" style="color: red" th:title="#{modifierTout}"
+					aria-hidden="true"></span>
+				</a><a id="supprime" th:href="@{'/evenement/supprime/'+${evenement.id}}">
+					<span class="confirmation bi bi-trash" style="color: red"
 					th:title="#{supprimer}" aria-hidden="true"></span>
 				</a>
 			</div>
