--- a/src/main/resources/templates/includeForm.html
+++ b/src/main/resources/templates/includeForm.html
@@ -31,6 +31,13 @@
 				<label class="form-label"
 				th:text="#{NotificationJoursAvant}" for="valeur"></label>
 		</div>
+		
+		<div th:fragment="finTraitement" class="form-check">
+			<input class="form-check-input" type="checkbox" id="finTraitement"
+				name="finTraitement" /> <label class="form-check-label"
+				for="finTraitement" th:text="#{finTraitement}"></label>
+		</div>
+		
 		<div th:fragment="poidskg" class="form-floating mb-3">
 			<input placeholder="" class="form-control" type="number" step="0.001"
 				id="valeur" name="valeur" /> <label class="form-label"
