--- a/src/main/resources/templates/evenement/evenementTraitementListe.html
+++ b/src/main/resources/templates/evenement/evenementTraitementListe.html
@@ -1,15 +1,20 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
+<head
+	th:replace="include :: common_header(~{::script},~{::style},~{::link})">
 <script th:replace="include :: moment"></script>
 <script th:replace="include :: jquerydaterangepicker"></script>
-<link th:replace="include :: cssjquerydaterangepicker"/>
+<link th:replace="include :: cssjquerydaterangepicker" />
 <script th:src="@{/js/ruches/evenementListe.js}"></script>
 <script th:inline="javascript">
-	const listeEvenements = /*[[#{listeEvenements}]]*/ null;
-	const buttontextprint = /*[[#{buttontextprint}]]*/ null;
-	const buttontextcol = /*[[#{buttontextcol}]]*/ null;
+	const listeEvenements = /*[[#{listeEvenements}]]*/null;
+	const buttontextprint = /*[[#{buttontextprint}]]*/null;
+	const buttontextcol = /*[[#{buttontextcol}]]*/null;
+	const url = /*[[@{'/evenement/essaim/listeTraitement/'}]]*/null;
 	$(document).ready(function() {
+		$('#groupe').on('change', function() {
+			location = url + ($(this).is(':checked'));
+		});
 		evenementListe(true);
 	});
 </script>
@@ -21,36 +26,49 @@
 	<br />
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col" th:text="#{eveDebutTraitement}">
+			<div id="titre" class="col" th:text="${tous} ? #{traitement} : #{eveDebutTraitement}"></div>
+			<div class="col">
+				<span class="padicons"> <input type="checkbox" id="groupe"
+					th:title="#{tous}" th:checked="${tous}" /> <label for="tous"
+					th:text="#{tous}"></label>
+				</span>
 			</div>
-			<div th:insert="includeForm :: evenementListeDates(retController='/evenement/essaim/listeTraitement')" class="col">
-			</div>
+			<div
+				th:insert="includeForm :: evenementListeDates(retController='/evenement/essaim/listeTraitement')"
+				class="col"></div>
 		</div>
 	</div>
 	<div class="container-fluid">
-		<table class="table table-bordered table-striped dt-responsive" id="evenements">
+		<table class="table table-bordered table-striped dt-responsive"
+			id="evenements">
 			<thead>
 				<tr>
 					<th th:text="#{date}"></th>
-					<th style="background-color:PaleGoldenRod" th:text="#{ruche}"></th>
-					<th style="background-color:PaleGoldenRod" th:text="#{essaim}"></th>
-					<th style="background-color:PaleGoldenRod" th:text="#{rucher}"></th>
-					<th style="background-color:LemonChiffon" th:text="#{valeur}"></th>
-					<th style="background-color:LemonChiffon" th:text="#{commentaire}"></th>
+					<th th:if="${tous}" style="background-color: PaleGoldenRod"
+						th:text="#{type}"></th>
+					<th style="background-color: PaleGoldenRod" th:text="#{ruche}"></th>
+					<th style="background-color: PaleGoldenRod" th:text="#{essaim}"></th>
+					<th style="background-color: PaleGoldenRod" th:text="#{rucher}"></th>
+					<th style="background-color: LemonChiffon" th:text="#{valeur}"></th>
+					<th style="background-color: LemonChiffon" th:text="#{commentaire}"></th>
 				</tr>
 			</thead>
 			<tbody>
 				<tr th:each="evenement : ${evenements}">
-					<td>
-						<a th:text="${#temporals.format(evenement.date, 'yyyy/MM/dd HH:mm')}"
-							th:href="@{'/evenement/'+${evenement.id}+'?type=traitement'}"></a>
+					<td><a
+						th:text="${#temporals.format(evenement.date, 'yyyy/MM/dd HH:mm')}"
+						th:href="@{'/evenement/'+${evenement.id}+'?type=traitement'}"></a>
+					</td>
+					<td th:if="${tous}"
+						th:text="${T(ooioo.ruches.evenement.TypeEvenement).ESSAIMTRAITEMENT.equals(evenement.type)}?#{Debut}:#{Fin}">
 					</td>
 					<td th:text="${evenement.ruche?.nom}"></td>
 					<td th:text="${evenement.essaim?.nom}"></td>
 					<td th:text="${evenement.rucher?.nom}"></td>
-					<td class="num" th:text="${#numbers.formatDecimal(evenement.valeur,1,2,'COMMA')}"></td>
+					<td class="num"
+						th:text="${#numbers.formatDecimal(evenement.valeur,1,2,'COMMA')}"></td>
 					<td th:text="${evenement.commentaire}"></td>
-				</tr>				
+				</tr>
 			</tbody>
 		</table>
 	</div>
