--- a/src/main/resources/templates/essaim/essaimDetail.html
+++ b/src/main/resources/templates/essaim/essaimDetail.html
@@ -122,7 +122,8 @@
 				</tr>
 			</tbody>
 		</table>
-		<table class="table table-sm table-bordered">
+		<h6 th:if="!${rucheEssaim}" th:text="#{essaimPasRuche}"></h6>
+		<table class="table table-sm table-bordered" th:if="${rucheEssaim}">
 			<thead>
 				<tr>
 					<th style="background-color: PaleGoldenRod" th:text="#{ruche}"></th>
